spacing issue resolve

--- a/asstes/style.css
+++ b/asstes/style.css
@@ -208,7 +208,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: space-between;
-            padding: 38px 40px;
+            padding: 38px 20px;
         }
         .blue-paragraph{
             width: 100%;;
@@ -218,7 +218,7 @@
             font-family: Arial;
         }
         .download-btn{
-            padding: 20px;
+            padding: 20px 15px;
             border-radius: 8px;
             filter: drop-shadow(0px 2px 1.5px rgba(0,0,0,0.2));
             background-image: linear-gradient(0deg, #29abc7 0%, #5fcddd 15%, #71d9e5 50%, #81e3ed 100%);
